# SCALPEL

scalpel/: .env.example  .gitignore  README.md  pyproject.toml
scalpel/data/lancedb/scalpel_papers.lance/_transactions/: 0-34da814e-26ee-45c6-9483-dd8e396d5455.txn  1-f86071d9-7ba3-41b8-8f61-795166509a07.txn  2-a889f466-c9c7-4fa4-97e4-4af24be20566.txn  3-8c14a271-0cb4-4415-8b16-e9c7760f7f26.txn  4-d6f4466e-9d81-4d37-963d-4f75223fcf87.txn
scalpel/data/lancedb/scalpel_papers.lance/_versions/: 1.manifest  2.manifest  3.manifest  4.manifest  5.manifest
scalpel/src/scalpel/: __init__.py  config.py  console.py
scalpel/src/scalpel/analysis/: __init__.py  engine.py  llm_client.py  prompts.py
scalpel/src/scalpel/embeddings/: __init__.py  vector_store.py
scalpel/src/scalpel/ingestion/: __init__.py  arxiv_fetcher.py  chunker.py  pdf_reader.py
scalpel/src/scalpel/interface/: __init__.py  cli.py  gui_textual.py
