[project]
name = "scalpel"
version = "0.1.0"
description = "Scientific Critique & Analysis Pipeline for Evidence Literature"
authors = [{ name = "Rachel" }]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ollama>=0.4.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pymupdf>=1.24.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "tiktoken (>=0.12.0,<0.13.0)",
    "lancedb>=0.27.0",
    "pandas (>=3.0.0,<4.0.0)",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
scalpel = "scalpel.interface.cli:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]